<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_menu"
        android:icon="@drawable/ic_more"
        android:title="@string/menu"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_speak_chinese"
                android:checkable="true"
                android:checked="true"
                android:icon="@drawable/ic_translate"
                android:title="@string/speak_chinese"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/action_create"
                android:icon="@drawable/ic_word_add"
                android:title="@string/create_word"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/action_load"
                android:icon="@drawable/ic_word_load"
                android:title="@string/load_word"
                app:showAsAction="ifRoom" />
        </menu>
    </item>
</menu>