<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    android:orientation="vertical"
    android:padding="8dp">

    <!-- 父项布局 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_file_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/iv_expand"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/expand"
            android:src="@drawable/ic_expand_more" />

    </LinearLayout>

    <!-- 子内容布局 -->
    <LinearLayout
        android:id="@+id/layout_expand_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:visibility="gone">

        <!-- 单词展示区域 -->
        <LinearLayout
            android:id="@+id/layout_word_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="8dp" />

        <!-- 切换按钮 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_switch"
                style="?attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_to_vocab" />

            <Button
                android:id="@+id/btn_export"
                style="?attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/export_vocab" />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>